[package]
name = "kompact_benchmarks"
version = "0.1.0"
authors = ["Lars Kroll <lkroll@kth.se>", "Harald Ng <hng@kth.se>"]
edition = "2018"

[dependencies]
kompact 				= { git = "https://github.com/kompics/kompact", rev = "94956af23a8a5d30c968e707512b4f9d74dea99d" }
#kompact                 = {git = "https://github.com/kompics/kompact"}
protobuf        		= { version = "2" }
futures         		= "0.1"
futures-cpupool 		= "0.1"
synchronoise 			= "1.0"
slog 					= {version = "2.4", features = ["max_level_debug", "release_max_level_info"]}
time 					= "0.1"
num_cpus 				= "1"
parse_duration 			= "2"
rand 					= {version = "0.7", features = ["small_rng"]}
chrono                  = "0.4"
raft                    = {git = "https://github.com/tikv/raft-rs", rev = "74f6aa43812a1c7809366079f84a6de28dfcf18e"} 
uuid                    = { version = "0.8", features = ["v4"] }
memmap                  = "0.7.0"
hashbrown               = "0.8.0"
indexmap                = "1.4.0"
hdrhistogram            = "6.0"
hocon 					= {version = "0.3.6", default-features = false}
quanta                  = {version = "0.6.5", optional = true}
leaderpaxos             = { git = "https://github.com/haraldng/omnipaxos", rev = "974b7ff24519b062a17faee5eb5c4443fa6cb5a2",  features = ["batch_accept"] }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[features]
travis_ci = ["slog/max_level_info", "slog/release_max_level_info"]

track_timeouts = [] # client keep tracks of which proposals timed out
track_latency = [] # measure latency for proposals
track_timestamps = ["quanta"]

#default = []

[profile.release]
lto = true
